@@ -18,7 +18,8 @@ extern int diseqc_send_msg(int fd, fe_sec_voltage_t v, struct diseqc_cmd **cmd,
 /**
  *   set up the switch to position/voltage/tone
  */
-int diseqc_setup(int frontend_fd, int switch_pos, int voltage_18, int hiband);
+int diseqc_setup(int frontend_fd, int switch_pos, int voltage_18, int hiband,
+		 int diseqc_ver);
 
 #endif
 
