@@ -990,6 +990,10 @@ extjs_dvbadapter(http_connection_t *hc, const char *remain, void *opaque)
     htsmsg_add_u32(r, "automux", tda->tda_autodiscovery);
     htsmsg_add_u32(r, "idlescan", tda->tda_idlescan);
     htsmsg_add_u32(r, "logging", tda->tda_logging);
+    htsmsg_add_str(r, "diseqcversion", 
+		   ((const char *[]){"DiSEqC 1.0 / 2.0",
+				       "DiSEqC 1.1 / 2.1"})
+		   [tda->tda_diseqc_version % 2]);
  
     out = json_single_record(r, "dvbadapters");
   } else if(!strcmp(op, "save")) {
@@ -1005,6 +1009,13 @@ extjs_dvbadapter(http_connection_t *hc, const char *remain, void *opaque)
 
     s = http_arg_get(&hc->hc_req_args, "logging");
     dvb_adapter_set_logging(tda, !!s);
+
+    if((s = http_arg_get(&hc->hc_req_args, "diseqcversion")) != NULL) {
+      if(!strcmp(s, "DiSEqC 1.0 / 2.0"))
+	dvb_adapter_set_diseqc_version(tda, 0);
+      else if(!strcmp(s, "DiSEqC 1.1 / 2.1"))
+	dvb_adapter_set_diseqc_version(tda, 1);
+    }
 
     out = htsmsg_create_map();
     htsmsg_add_u32(out, "success", 1);
